new image in the better call saull

--- a/pag5.html
+++ b/pag5.html
@@ -26,106 +26,113 @@
             </ul>
 
         </nav>
-        <div class="margin">
 
-            <h1>Curiosidades de Breaking Bad</h1>
-            <hr>
-            <div class="text1">
-                <p>
 
-                    Em 2018, a série Breaking Bad, considerada uma das melhores séries dramáticas de todos os tempos,
-                    completou
-                    dez
-                    anos desde a estreia.
-                </p>
-                <p>
-                    Breaking Bad entrou para o Livro dos Recordes como o maior sucesso de crítica de todos os tempos, e
-                    abocanhou
-                    mais de 146 prêmios (só nos Emmys, foram 16) ao longo das cinco temporadas do programa.
-                </p>
-                <p>
-                    Com a premissa de explorar uma história em que o protagonista torna-se o antagonista, Vince Gilligan
-                    desenvolveu
-                    uma trama que gira em torno de um pacato professor de química, Walter White.
-                </p>
-                <p>
-                    O mundo quase foi privado da existência de Jesse Pinkman. O plano inicial do criador da série, Vince
-                    Gilligan,
-                    era de que o personagem de Aaron Paul morresse no final do episódio 9 da primeira temporada. A
-                    ‘salvação’ de
-                    Jesse se deu graças à greve do sindicato dos roteiristas, entre 2008 e 2008, que fez a série
-                    produzir sete
-                    episódios a menos. Quando a segunda temporada foi confirmada, Gilligan já havia mudado de ideia:
-                    além do
-                    talento
-                    de Aaron, o personagem havia se tornado imprescindível na trama.
-                </p>
+        <h1>Curiosidades de Breaking Bad</h1>
+        <hr>
+        <div class="text1">
+            <p>
 
-                <div class="center">
-                    <img src="images/waltandjesse.jpg" height="300px" alt="Jesse Pinkman e Walter White na montanha sentados juntos">
-                </div>
+                Em 2018, a série Breaking Bad, considerada uma das melhores séries dramáticas de todos os tempos,
+                completou
+                dez
+                anos desde a estreia.
+            </p>
+            <p>
+                Breaking Bad entrou para o Livro dos Recordes como o maior sucesso de crítica de todos os tempos, e
+                abocanhou
+                mais de 146 prêmios (só nos Emmys, foram 16) ao longo das cinco temporadas do programa.
+            </p>
+            <p>
+                Com a premissa de explorar uma história em que o protagonista torna-se o antagonista, Vince Gilligan
+                desenvolveu
+                uma trama que gira em torno de um pacato professor de química, Walter White.
+            </p>
+            <p>
+                O mundo quase foi privado da existência de Jesse Pinkman. O plano inicial do criador da série, Vince
+                Gilligan,
+                era de que o personagem de Aaron Paul morresse no final do episódio 9 da primeira temporada. A
+                ‘salvação’ de
+                Jesse se deu graças à greve do sindicato dos roteiristas, entre 2008 e 2008, que fez a série
+                produzir sete
+                episódios a menos. Quando a segunda temporada foi confirmada, Gilligan já havia mudado de ideia:
+                além do
+                talento
+                de Aaron, o personagem havia se tornado imprescindível na trama.
+            </p>
 
-                <p>
-
-                    A fachada da casinha suburbana dos White existe e há gente morando nela. Mais especificamente, uma
-                    senhora
-                    chamada Fran, que vive lá desde 1973. Ela credita o resultado final que se vê nas telinhas como o
-                    produto de
-                    “muita licença criativa” pelo departamento de produção de cenários.</p>
-
-                <p>
-                    Fran não se importa com a atenção que a casa recebe ou com as centenas de carros que estacionam em
-                    frente à
-                    sua
-                    garagem todos os meses. A famosa piscina no quintal, inicialmente, não faria parte da casa dos
-                    White.
-                </p>
-
-                <div class="center">
-                    <img src="images/casa.jpg" height="300px" alt="Casa do casal Walter White e Skyler White">
-                    <img src="images/francasa.jpg" height="300px" alt="Casal que mora na vida real na casa da série">
-                </div>
-
-                <p>
-
-                    Breaking Bad exibiu um total de 62 episódios, número corresponde ao elemento "Samário" na tabela
-                    periódica,
-                    que
-                    é utilizado para tratar o Câncer de Pulmão. O número de episódios não foi definido com base no
-                    Samário, mas
-                    a
-                    coincidência foi interessante.
-
-                </p>
-
-                <div class="center">
-                    <img src="images/tabelaquimica.png" alt="Elementos da tabela periótica">
-                </div>
-
-                <p>
-                    A placa do carro onde Walter hospedava a M60 tem terminação "516", referência ao último episódio da
-                    série,
-                    16º
-                    episódio da 5ª temporada.
-                </p>
-
-                <div class="center">
-                    <img src="images/imageplaca.png" alt="Placa do carro fazendo referência para o número de episodios e temporadas da série">
-                </div>
-
-                <p>
-                    Foram vistos objetos vermelhos, que representa perigo, principalmente onde os neonazistas foram
-                    mortos, na
-                    casa
-                    de Lydia, na M60 de Walter, e no controle de seu carro.
-                </p>
-
-                <div class="center">
-                    <img src="images/referenciavermelho.png" alt="Imagem destacando alguns objetos vermelhos com a referencia onde aos neonazistas">
-                </div>
-                <hr>
+            <div class="center">
+                <img src="images/waltandjesse.jpg" height="300px"
+                    alt="Jesse Pinkman e Walter White na montanha sentados juntos" title="Jesse Pinkman e Walter White">
             </div>
+
+            <p>
+
+                A fachada da casinha suburbana dos White existe e há gente morando nela. Mais especificamente, uma
+                senhora
+                chamada Fran, que vive lá desde 1973. Ela credita o resultado final que se vê nas telinhas como o
+                produto de
+                “muita licença criativa” pelo departamento de produção de cenários.</p>
+
+            <p>
+                Fran não se importa com a atenção que a casa recebe ou com as centenas de carros que estacionam em
+                frente à
+                sua
+                garagem todos os meses. A famosa piscina no quintal, inicialmente, não faria parte da casa dos
+                White.
+            </p>
+
+            <div class="center">
+                <img src="images/casa.jpg" height="300px" alt="Casa do casal Walter White e Skyler White"
+                    title="Casa de Walter White e Skyler White">
+                <img src="images/francasa.jpg" height="300px" alt="Casal que mora na vida real na casa da série"
+                    title="Donos da que mostra na série Breaking Bad">
+            </div>
+
+            <p>
+
+                Breaking Bad exibiu um total de 62 episódios, número corresponde ao elemento "Samário" na tabela
+                periódica,
+                que
+                é utilizado para tratar o Câncer de Pulmão. O número de episódios não foi definido com base no
+                Samário, mas
+                a
+                coincidência foi interessante.
+
+            </p>
+
+            <div class="center">
+                <img src="images/tabelaquimica.png" alt="Elementos da tabela periótica" title="Tabela periótica">
+            </div>
+
+            <p>
+                A placa do carro onde Walter hospedava a M60 tem terminação "516", referência ao último episódio da
+                série,
+                16º
+                episódio da 5ª temporada.
+            </p>
+
+            <div class="center">
+                <img src="images/imageplaca.png"
+                    alt="Placa do carro fazendo referência para o número de episodios e temporadas da série"
+                    title="Referência da Placa">
+            </div>
+
+            <p>
+                Foram vistos objetos vermelhos, que representa perigo, principalmente onde os neonazistas foram
+                mortos, na
+                casa
+                de Lydia, na M60 de Walter, e no controle de seu carro.
+            </p>
+
+            <div class="center">
+                <img src="images/referenciavermelho.png"
+                    alt="Imagem destacando alguns objetos vermelhos com a referencia onde aos neonazistas"
+                    title="Referência objetos vermelhos">
+            </div>
+            <hr>
         </div>
+
     </main>
 </body>
 
