--- a/pag6.html
+++ b/pag6.html
@@ -36,7 +36,7 @@
 
 
                     <video width="600" height="400" controls>
-                        <source src="video/elcamino.mp4">
+                        <source src="video/elcamino.mp4" alt="Trailer do filme El Camino">
                     </video>
                     <br>
                 </div>
@@ -44,7 +44,7 @@
                 <h1>Sinopse</h1>
                 </p>
                 <div class="center">
-                    <img src="images/elcaminojesse.jpg">
+                    <img src="images/elcaminojesse.jpg" alt="Foto do catálogo do filme El Camino do Jesse" title="Catálogo El Camino">
                     <p>
                         11 de outubro de 2019 para filmes online / 2h 02min / Suspense, Drama
                     </p>
