--- a/pag8.html
+++ b/pag8.html
@@ -30,22 +30,61 @@
 
         </nav>
 
-<body>
+        <body>
 
-    <h1>
-        Better Call Saul
-    </h1>
-    <hr>
-    <p>
-    
-        Better Call Saul é um prólogo (ou prelúdio) a Breaking Bad, mas a série se passa em três épocas diferentes.
-        Apesar do nome da série, a primeira temporada não é sobre Saul Goodman, apesar de nos explicar todas as
-        circunstâncias que transformaram James McGill, ou Slippin' Jimmy, em Saul. A série começa com cenas do presente
-        pós-Breaking Bad, e também mostra a juventude de Jimmy. A maior parte das ações se passa durante o tempo em que
-        Saul tenta a sorte como advogado em Albuquerque, enquanto cuida de seu irmão Chuck.
-    
-    </p>
-</main>
+            <h1>
+                Better Call Saul
+            </h1>
+            <hr>
+            <div class="text1">
+
+                <p>
+
+                    Better Call Saul é um prólogo (ou prelúdio) a Breaking Bad, mas a série se passa em três épocas
+                    diferentes. Apesar do nome da série, a primeira temporada não é sobre Saul Goodman, apesar de nos
+                    explicar todas as circunstâncias que transformaram James McGill, ou Slippin' Jimmy, em Saul. A série
+                    começa com cenas do presente pós-Breaking Bad, e também mostra a juventude de Jimmy. A maior parte
+                    das ações se passa durante o tempo em que Saul tenta a sorte como advogado em Albuquerque, enquanto
+                    cuida de seu irmão Chuck.
+                </p>
+                <p>
+                    Se muitos esperavam por uma série simples, criada para consolar os fãs depois do final de Breaking
+                    Bad, o que se viu na tela foi algo épico, digno de um Sergio Leone com diálogos de um Tarantino. Em
+                    Better Call Saul a ação é muito mais direta, não tem enrolação de algumas partes das primeiras
+                    temporadas de Breaking Bad. É como se a série já começasse em alta velocidade, e desde os primeiros
+                    episódios já deixa os espectadores sem fôlego. A primeira temporada de Better Call Saul é uma
+                    melhores que eu já vi, com um arco perfeito de seu início até o final, incluindo uma transformação
+                    completa no seu personagem principal. Outra coisa em comum com Breaking Bad é a excelente trilha
+                    sonora, que realmente valoriza o que acontece na tela.
+                </p>
+                <p>
+                    Better Call Saul não apenas nos apresenta a sua origem de Saul Goodman (Jimmy McGill) mas também
+                    para o sensacional Mike Ehrmantraut, que parece ser um simples policial aposentado, mas que ao longo
+                    da série nos mostra por quais motivos ele irá se tornar o hitman Bad Motherfucker de Gus Fring em
+                    Breaking Bad. Pra mim, alguns dos melhores episódios da temporada foram os focados no Mike, desde
+                    sempre um dos meus personagens favoritos do universo criado por Vince Gilligan. Desde os primeiros
+                    episódios, é ótimo ver o ator Jonathan Banks em ação como Mike, mesmo enquanto ele ainda estava
+                    apenas perturbando a vida de Jimmy.
+                </p>
+                <div class="center">
+                    <img src="images/Bettercall.jpg" alt="Personagens principais da série Better Call Saul"
+                        title="Personagens principais da série Better Call Saul">
+                </div>
+                <p>
+                    Outro motivo para assistir a série é o elenco, que é de primeiríssima qualidade. Além de Odenkirk e
+                    Banks soltando faíscas em cena como Jimmy e Mike, a série nos apresenta personagens que conseguem
+                    ser inacreditavelmente surreais e reais ao mesmo tempo, como Chuck, o irmão de quem Jimmy cuida com
+                    carinho, ou Kim, a advogada que manda no coração e na sua consciência, interpretados por Michael
+                    McKean e Rhea Seehorn, respectivamente. Outro ator que merece elogios é Patrick Fabian, que
+                    interpreta de forma odiosa o sócio de Chuck, Howard Hamlin. Bob Odenkirk merece um capítulo à parte,
+                    ele é uma força da natureza na tela, trazendo humor e leveza ao personagem Jimmy, mesmo em cenas
+                    profundamente densas e dramáticas. Durante esta temporada, acabei de assistir vários episódios
+                    impressionado por seu talento como ator, e em pelo menos um deles, rindo durante vários minutos sem
+                    parar.
+                </p>
+                <hr>
+    </main>
+
 </body>
 
 </html>
