--- a/pag3.html
+++ b/pag3.html
@@ -8,6 +8,16 @@
     <title>Sinopse BrBad</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/pag3.css">
+    <style>
+        #grad1 {
+            height: 20px;
+            background-color: rgb(0, 255, 42);
+            background-image: linear-gradient(to bottom right, rgb(9, 255, 0), rgb(0, 0, 0));
+            max-width: 100%;
+            border-radius: 25px;
+
+        }
+    </style>
 
 </head>
 
@@ -30,6 +40,7 @@
         </header>
         <hr>
         <div class="text1">
+            <div id="grad1"></div>
             </header>
             <h2>Primeira temporada (2008)</h2>
             </header>
@@ -702,6 +713,9 @@
                 </article>
             </div>
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 </body>
 
 </html>
