--- a/pag4.html
+++ b/pag4.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/pag4.css">
 
-    
+
 
 
 </head>
@@ -29,7 +29,7 @@
         </nav>
         <h1>Elenco Breaking Bad</h1>
         <hr>
-        
+
         <!-- Dentro da table eu utlizei a tag <thead> para identificar a cabeça da table e o <tbody> para identificar o corpo -->
         <table class="tabelaEditavel">
             <thead>
@@ -194,6 +194,9 @@
         </table>
         <hr>
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 </body>
 
 </html>
