--- a/pag5.html
+++ b/pag5.html
@@ -7,6 +7,16 @@
     <title>Curiosidades BrBad</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/pag5.css">
+    <style>
+        #grad1 {
+            height: 20px;
+            background-color: rgb(0, 255, 42);
+            background-image: linear-gradient(to bottom right, rgb(9, 255, 0), rgb(0, 0, 0));
+            max-width: 100%;
+            border-radius: 25px;
+
+        }
+    </style>
 
 
 </head>
@@ -30,7 +40,9 @@
 
         <h1>Curiosidades de Breaking Bad</h1>
         <hr>
+
         <div class="text1">
+            <div id="grad1"> </div>
             <p>
 
                 Em 2018, a série Breaking Bad, considerada uma das melhores séries dramáticas de todos os tempos,
@@ -62,8 +74,11 @@
             </p>
 
             <div class="center">
-                <img src="images/waltandjesse.jpg" height="300px"
-                    alt="Jesse Pinkman e Walter White na montanha sentados juntos" title="Jesse Pinkman e Walter White">
+                <a href="/images/waltandjesse.jpg" target="_blank">
+                    <img src="images/waltandjesse.jpg" height="300px"
+                        alt="Jesse Pinkman e Walter White na montanha sentados juntos"
+                        title="Jesse Pinkman e Walter White">
+                </a>
             </div>
 
             <p>
@@ -83,10 +98,14 @@
             </p>
 
             <div class="center">
-                <img src="images/casa.jpg" height="300px" alt="Casa do casal Walter White e Skyler White"
-                    title="Casa de Walter White e Skyler White">
-                <img src="images/francasa.jpg" height="300px" alt="Casal que mora na vida real na casa da série"
-                    title="Donos da que mostra na série Breaking Bad">
+                <a href="/images/casa.jpg" target="_blank">
+                    <img src="images/casa.jpg" height="300px" alt="Casa do casal Walter White e Skyler White"
+                        title="Casa de Walter White e Skyler White">
+                </a>
+                <a href="/images/francasa.jpg" target="_blank">
+                    <img src="images/francasa.jpg" height="300px" alt="Casal que mora na vida real na casa da série"
+                        title="Donos da casa que mostra na série Breaking Bad">
+                </a>
             </div>
 
             <p>
@@ -102,7 +121,9 @@
             </p>
 
             <div class="center">
-                <img src="images/tabelaquimica.png" alt="Elementos da tabela periótica" title="Tabela periótica">
+                <a href="/images/tabelaquimica.png" target="_blank">
+                    <img src="images/tabelaquimica.png" alt="Elementos da tabela periótica" title="Tabela periótica">
+                </a>
             </div>
 
             <p>
@@ -113,9 +134,11 @@
             </p>
 
             <div class="center">
-                <img src="images/imageplaca.png"
-                    alt="Placa do carro fazendo referência para o número de episodios e temporadas da série"
-                    title="Referência da Placa">
+                <a href="/images/imageplaca.png" target="_blank">
+                    <img src="images/imageplaca.png"
+                        alt="Placa do carro fazendo referência para o número de episodios e temporadas da série"
+                        title="Referência da Placa">
+                </a>
             </div>
 
             <p>
@@ -126,14 +149,19 @@
             </p>
 
             <div class="center">
-                <img src="images/referenciavermelho.png"
-                    alt="Imagem destacando alguns objetos vermelhos com a referencia onde aos neonazistas"
-                    title="Referência objetos vermelhos">
+                <a href="/images/referenciavermelho.png" target="_blank">
+                    <img src="images/referenciavermelho.png"
+                        alt="Imagem destacando alguns objetos vermelhos com a referencia onde aos neonazistas"
+                        title="Referência objetos vermelhos">
+                </a>
             </div>
             <hr>
         </div>
 
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 </body>
 
 </html>
