--- a/pag6.html
+++ b/pag6.html
@@ -7,6 +7,16 @@
     <title>El camino</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/pag6.css">
+    <style>
+        #grad1 {
+            height: 20px;
+            background-color: rgb(0, 255, 42);
+            background-image: linear-gradient(to bottom right, rgb(9, 255, 0), rgb(0, 0, 0));
+            max-width: 100%;
+            border-radius: 25px;
+
+        }
+    </style>
 
 
 </head>
@@ -32,8 +42,8 @@
 
         <div class="margin">
             <div class="text1">
+                <div id="grad1"></div>
                 <div class="center">
-
 
                     <video width="600" height="400" controls>
                         <source src="video/elcamino.mp4" alt="Trailer do filme El Camino">
@@ -41,12 +51,15 @@
                     <br>
                 </div>
                 <p>
-                <h1>Sinopse</h1>
+                <h2>Sinopse</h2>
                 </p>
                 <div class="center">
-                    <img src="images/elcaminojesse.jpg" alt="Foto do catálogo do filme El Camino do Jesse" title="Catálogo El Camino">
+                    <a href="/images/elcaminojesse.jpg" target="_blank">
+                    <img src="images/elcaminojesse.jpg" alt="Foto do catálogo do filme El Camino do Jesse"
+                        title="Catálogo El Camino">
+                    </a>
                     <p>
-                        11 de outubro de 2019 para filmes online / 2h 02min / Suspense, Drama
+                    <h6>11 de outubro de 2019 / 2h 02min / Suspense, Drama</h6>
                     </p>
 
                     <p>
@@ -62,9 +75,9 @@
                     <hr>
                     <p>
                 </div>
-                <h1>
+                <h3>
                     El Camino: Filme baseado em Breaking Bad teria 3 horas
-                </h1>
+                </h3>
                 </p>
                 <hr>
                 <p>
@@ -113,6 +126,9 @@
             </div>
         </div>
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 </body>
 
 </html>
