--- a/pag7.html
+++ b/pag7.html
@@ -140,6 +140,9 @@
         </table>
         <hr>
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 </body>
 
 </html>
