--- a/pag1.html
+++ b/pag1.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=divice-width, initial-scale=1.0">
     <title>Redirecionamento de link</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
-
     <!-- Inclui o arquivo CSS Externo -->
-
     <link rel="stylesheet" href="css/pag1.css">
 </head>
 
 <body class="main-hero">
+
     <main>
         <nav>
+    
+           
             <ul>
                 <li><a href="pag1.html">Redirecionamento de Página</a></li>
                 <li><a href="pag2.html">Formulário</a> </li>
@@ -27,6 +28,13 @@
             </ul>
         </nav>
         <header>
+            <br>
+            <div class="center">
+            <img src="/images/logo.jpg"
+            width="100px"
+            height="100px">
+            </div>
+
             <h1>
                 Bem vindo ao meu site sobre Breaking Bad, acima são os links para direcioná-lo para alguns assuntos
                 sobre a
@@ -42,7 +50,7 @@
                 Seu navegador não suporta este tipo de mídia.
             </video>
         </center>
-        <p class="center">
+        <p class="center" style="color:rgb(0, 255, 13) ">
             <strong>"I was alive"</strong> <cite>~MR.Lambert</cite>
         </p>
         <br>
