--- a/pag8.html
+++ b/pag8.html
@@ -7,6 +7,16 @@
     <title>Better Call Saul</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/pag8.css">
+    <style>
+        #grad1 {
+            height: 20px;
+            background-color: rgb(0, 255, 42);
+            background-image: linear-gradient(to bottom right, rgb(9, 255, 0), rgb(0, 0, 0));
+            max-width: 100%;
+            border-radius: 25px;
+
+        }
+    </style>
 
 
 
@@ -37,6 +47,7 @@
             </h1>
             <hr>
             <div class="text1">
+                <div id="grad1"></div>
 
                 <p>
 
@@ -67,8 +78,10 @@
                     apenas perturbando a vida de Jimmy.
                 </p>
                 <div class="center">
-                    <img src="images/Bettercall.jpg" alt="Personagens principais da série Better Call Saul"
-                        title="Personagens principais da série Better Call Saul">
+                    <a href="/images/Bettercall.jpg" target="_blank">
+                        <img src="images/Bettercall.jpg" alt="Personagens principais da série Better Call Saul"
+                            title="Personagens principais da série Better Call Saul">
+                    </a>
                 </div>
                 <p>
                     Outro motivo para assistir a série é o elenco, que é de primeiríssima qualidade. Além de Odenkirk e
@@ -84,6 +97,9 @@
                 </p>
                 <hr>
     </main>
+    <footer id="main-footer">
+        <p>Copyright &copy;2021,Igor Ramires</p>
+    </footer>
 
 </body>
 
