new logo into pag1

--- a/pag1.html
+++ b/pag1.html
@@ -30,9 +30,9 @@
         <header>
             <br>
             <div class="center">
-            <img src="/images/logo.jpg"
+            <img src="images/logo.jpg"
             width="100px"
-            height="100px">
+            height="100px" alt="logo">
             </div>
 
             <h1>
